# domicile

./: .air.toml  .editorconfig  .env.example  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .release-it.json  .release-please-manifest.json  .releaserc  .releaserc.json  .releaserc.yml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  Taskfile.yml  alembic.ini  docker-compose.dev.yml  docker-compose.yml  domicile_dev.db  env.ts  go.mod  go.sum  main.go  mkdocs.yml  nest-cli.json  nx.json  package-lock.json  package.json  package.workspaces.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  release.config.js  sqlc.yaml  tsconfig.base.json  (+2 more)
api/: .env  .env.sample  .flake8  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  alembic.ini  apollo.config.js  docker-compose.yml  domicile-test-db  jest.config.ts  main.py  mikro-orm.config.ts  ormconfig.ts  package.json  pnpm-lock.yaml  prestart.sh  pyproject.toml  server.go  swagger-spec.json  token.go  tsconfig.json  user.go
api-v3/: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
api-v3/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
api-v3/domicile/: __main__.py  conftest.py  main.py  settings.py
api-v3/domicile/database/: crud.py  database.py
api-v3/domicile/db/: base.py  utils.py
api-v3/domicile/models/: recipe.py  schemas.py
api-v3/domicile/routes/: recipes.py
api-v3/domicile/schemas/: recipe.py
api-v3/domicile/tests/: __init__.py  test_dummy.py  test_echo.py  test_kafka.py
api-v3/domicile/web/: __init__.py  application.py  lifetime.py
api/app/: main.py  prestart.py
api/app/api/: deps.py
api/app/controllers/: auth.py
api/app/crud/: crud_base.py  crud_user.py
api/app/db/: base_class.py  init_db.py  models.py  schemas.py
api/app/models/: recipe.py  task.py  user.py
api/app/repositories/: task.py  user.py
api/app/tests/: conftest.py
api/core/: server.py
api/core/cache/: redis_backend.py
api/core/controller/: base.py
api/core/database/: session.py
api/core/factory/: factory.py
api/core/repository/: base.py
api/core/security/: jwt.py
api/documentation/: overview.html
api/documentation/classes/: CreateChoreDto.html  CreateListDto.html  CreateRoomDto.html  LoginUserResponse.html  Migration20220926031634.html  Migration20220926214650.html  Migration20220926222224.html  Migration20220926231541.html  Migration20221031000536.html  TaskFactory.html  UpdateChoreDto.html  UpdateListDto.html  UpdateProfileDto.html  UserDto.html  UserFactory.html
api/documentation/controllers/: ChoresController.html  ListsController.html  RoomsController.html  TasksController.html
api/documentation/entities/: BaseEntity.html  RefreshToken.html  Room.html  User.html
api/documentation/injectables/: ChoresService.html  JwtStrategy.html  LocalAuthGuard.html
api/documentation/interfaces/: FindAllArgs-1.html  FindAllArgs-2.html  FindOneArgs-1.html  FindOneArgs.html
api/documentation/js/: menu-wc.js
api/documentation/miscellaneous/: functions.html  variables.html
api/documentation/modules/: AppModule.html  ChoresModule.html  RoomsModule.html  TasksModule.html  UsersModule.html
api/migrations/: env.py
api/migrations/versions/: 09aaaace6e7f_init.py  2023_07_28_2054-c77b3e866175_latest.py  2023_07_29_1218-77d33a9580dc_latest.py  2023_07_30_1714-66ab1f7ca347_latest.py  c309234f0c07_users_first_last.py
api/seeders/: database.seeder.ts
api/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  cli.ts  config.ts  environments.ts  main.ts  schema.graphql
api/src/article/: article.module.ts
api/src/articles/: article.module.ts
api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts  local.strategy.ts  requestWithUser.interface.ts
api/src/chores/: chores.controller.ts
api/src/config/: config.module.ts  configuration.ts
api/src/cookbooks/: cookbooks.controller.spec.ts  cookbooks.service.spec.ts
api/src/health/: health.controller.ts
api/src/lists/: list.entity.ts  lists.controller.spec.ts  lists.controller.ts  lists.module.ts  lists.service.spec.ts  lists.service.ts
api/src/meal-planner/: meal-planner.controller.spec.ts
api/src/posts/: posts.controller.ts  posts.module.ts  posts.service.ts
api/src/recipes/: recipe.entity.ts  recipes.controller.spec.ts  recipes.module.ts  recipes.resolver.ts  recipes.service.spec.ts  recipes.service.ts
api/src/rooms/: rooms.module.ts  rooms.service.ts
api/src/shared/: shared.module.ts
api/src/tasks/: task.entity.ts  tasks.controller.spec.ts  tasks.controller.ts  tasks.module.ts  tasks.resolver.spec.ts  tasks.service.spec.ts  tasks.service.ts
api/temp/: BaseEntity.js.json  BaseEntity.ts.json  Chore.js.json  Chore.ts.json  Cookbook.js.json  Cookbook.ts.json  List.js.json  List.ts.json  MealPlanner.js.json  MealPlanner.ts.json  Post.js.json  Post.ts.json  Recipe.js.json  Recipe.ts.json  RecipeCategory.js.json  RecipeCategory.ts.json  RefreshToken.js.json  RefreshToken.ts.json  Room.js.json  Room.ts.json  ShoppingList.js.json  ShoppingList.ts.json  Task.js.json  Task.ts.json  Todo.js.json  Todo.ts.json  User.js.json  User.ts.json
api/test/: auth.e2e-spec.ts
api/tests/: conftest.py
(+922 files in other folders)
