[tool.poetry]
name = "domicile"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.0"
uvicorn = { version = "^0.23.0", extras = ["standard"] }
gunicorn = "^21.2.0"
pydantic = "2.2.1"
pydantic-settings = "^2"
yarl = "^1.9.2"
ujson = "^5.8.0"
SQLAlchemy = {version = "^2.0.18", extras = ["asyncio"]}
alembic = "^1.11.1"
aiosqlite = "^0.19.0"
httptools = "^0.6.0"
loguru = "^0.7.0"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocs-gen-files = "^0.5.0"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
python-dotenv = "^1.0.0"
celery = "^5.3.1"
emails = "^0.6"
psycopg2-binary = "^2.9.7"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~6.1.0"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.18.0"
black = "^23.0.0"
autoflake = "^2.0.0"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^1.0.0"
httpx = "^0.25.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["domicile",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "DOMICILE_ENVIRONMENT=pytest",
    "DOMICILE_DB_FILE=test_db.sqlite3",
]

[fastapi-template.options]
project_name = "domicile"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "True"
kube_name = "domicile"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "True"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"
pydanticv1 = "None"
gunicorn = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
